Implement pagination for renovation requests